--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   border-radius: 15px;
   width: 300px;
   height: 300px;
-  box-shadow: 5px 5px 10px -7px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 25px -7px rgba(0, 0, 0, 0.5);
 }
 
 h1 {
@@ -39,7 +39,11 @@ button {
   border-radius: 5px;
   font-size: 20px;
   margin: 3em 0;
-  box-shadow: 5px 5px 10px -7px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 15px -7px rgba(0, 0, 0, 0.3);
+}
+
+button:hover {
+  background-color: #5eaaa8;
 }
 
 .buttons {
